force-app/main/default/objects/Participant_Enrollment_Status_History__c/Participant_Enrollment_Status_History__c.object-meta.xml
<CustomObject>

    <label>Participant Enrollment Status History</label>
    <nameField>
        <displayFormat>PESH-{0000000}</displayFormat>
        <label>Participant Enrollment Status History Na</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Participant Enrollment Status History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>