force-app/main/default/objects/Participant_Enrollment_Status_History__c/fields/Additional_Notes__c.field-meta.xml
<CustomField>
        <fullName>Additional_Notes__c</fullName>
        <inlineHelpText>Please add Additional notes in the format  of Additional Notes on 12/9/2020 12:36 AM by IQVIA#</inlineHelpText>
        <label>Additional Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
</CustomField>