force-app/main/default/objects/Participant_Enrollment_Status_History__c/fields/Backward_Bulk_Update__c.field-meta.xml
<CustomField>
    <fullName>Backward_Bulk_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Backward Bulk Update</label>
    <type>Checkbox</type>
</CustomField>