force-app/main/default/objects/Participant_Enrollment_Status_History__c/fields/Disabled_PESH__c.field-meta.xml
<CustomField>
    <fullName>Disabled_PESH__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disabled PESH</label>
    <type>Checkbox</type>
</CustomField>