force-app/main/default/objects/Participant_Enrollment_Status_History__c/fields/NewStatus__c.field-meta.xml
<CustomField>
    <fullName>NewStatus__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NewStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>