force-app/main/default/objects/Participant_Enrollment_Status_History__c/fields/Non_Enrollment_Reason__c.field-meta.xml
<CustomField>
    <fullName>Non_Enrollment_Reason__c</fullName>
    <label>Non-Enrollment Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Site No Longer Accepting Referrals</fullName>
            </value>
            <value>
                <fullName>Didn&apos;t Meet Pre-Screening Eligibility</fullName>
            </value>
            <value>
                <fullName>Declined Practitioner</fullName>
            </value>
            <value>
                <fullName>PI Decision</fullName>
            </value>
            <value>
                <fullName>Didn&apos;t Show For Initial Visit</fullName>
            </value>
            <value>
                <fullName>Didn&apos;t Sign Consent</fullName>
            </value>
            <value>
                <fullName>Failed Inclusion/Exclusion Criteria</fullName>
            </value>
            <value>
                <fullName>Patient Declined</fullName>
            </value>
            <value>
                <fullName>Visit Out Of Window</fullName>
            </value>
            <value>
                <fullName>Patient Decision</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Not Ready to Schedule</fullName>
            </value>
            <value>
                <fullName>Call Back</fullName>
            </value>
            <value>
                <fullName>Transportation Issues</fullName>
            </value>
            <value>
                <fullName>Childcare Issues</fullName>
            </value>
            <value>
                <fullName>Participant Not Interested</fullName>
            </value>
            <value>
                <fullName>Did Not Meet Inclusion/Exclusion Criteria</fullName>
            </value>
            <value>
                <fullName>Did Not Attend Appointment</fullName>
            </value>
            <value>
                <fullName>Left a Message</fullName>
            </value>
            <value>
                <fullName>Protocol Concerns</fullName>
            </value>
            <value>
                <fullName>Inadequate Documentation</fullName>
            </value>
            <value>
                <fullName>Does Not Meet Eligibility Criteria</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>