force-app/main/default/objects/Participant_Enrollment_Status_History__c/fields/PSE_Date__c.field-meta.xml
<CustomField>
        <fullName>PSE_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PSE Date</label>
        <type>Date</type>
</CustomField>