force-app/main/default/objects/Participant_Enrollment_Status_History__c/fields/Screening_passed_after_withdrew_declined__c.field-meta.xml
<CustomField>
    <fullName>Screening_passed_after_withdrew_declined__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Screening passed after withdrew/declined</label>
    <type>Checkbox</type>
</CustomField>