force-app/main/default/objects/Participant_Enrollment_Status_History__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Participant Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Participant_Statuses</valueSetName>
    </valueSet>
</CustomField>