force-app/main/default/objects/Participant_Enrollment_Status_History__c/fields/Status_Label__c.field-meta.xml
<CustomField>
    <fullName>Status_Label__c</fullName>
    <formula>IF( TEXT(Status__c) == &apos;Received&apos;, &apos;PWS_Received_Name&apos;,
IF(TEXT(Status__c) == &apos;Contact Attempted&apos;, &apos;Contact_Attempted&apos;,
IF(TEXT(Status__c) == &apos;Pre-review Passed&apos;, &apos;Pre_review_Passed&apos;,
IF(TEXT(Status__c) == &apos;Pre-review Failed&apos;, &apos;Pre_review_Failed&apos;,
IF(TEXT(Status__c) == &apos;Ready to Contact&apos;, &apos;PWS_Contact_Outcome_Placeholder&apos;,
IF(TEXT(Status__c) == &apos;Contacted - Not Suitable&apos;, &apos;Contacted_Not_Suitable&apos;,
IF(TEXT(Status__c) == &apos;Unable to Reach&apos;, &apos;Unable_to_Reach&apos;,
IF(TEXT(Status__c) == &apos;Successfully Contacted&apos;, &apos;Successfully_Contacted&apos;,
IF(TEXT(Status__c) == &apos;Successfully re-engaged&apos;, &apos;Successfully_Contacted&apos;,
IF(TEXT(Status__c) == &apos;Participant No Show&apos;, &apos;RH_ParticipantNoshow&apos;,
IF(TEXT(Status__c) == &apos;Eligibility Passed&apos;, &apos;Eligibility_Passed&apos;,
IF(TEXT(Status__c) == &apos;Eligibility Failed&apos;, &apos;Eligibility_Failed&apos;,
IF(TEXT(Status__c) == &apos;Ready to Screen&apos;, &apos;Ready_to_Screen&apos;,
IF(TEXT(Status__c) == &apos;Screening In Progress&apos;, &apos;Screening_In_Progress&apos;,
IF(TEXT(Status__c) == &apos;Screening In Progress - Wash Out Period&apos;, &apos;In_Wash_Out_Period&apos;,
IF(TEXT(Status__c) == &apos;Screening Failed&apos;, &apos;Screening_Failed&apos;,
IF(TEXT(Status__c) == &apos;Unable to Screen&apos;, &apos;Unable_to_Screen&apos;,
IF(TEXT(Status__c) == &apos;Withdrew Consent&apos;, &apos;Withdrew_Consent&apos;,
IF(TEXT(Status__c) == &apos;Declined Consent&apos;, &apos;Declined_Consent&apos;,
IF(TEXT(Status__c) == &apos;Screening Passed&apos;, &apos;Screening_Passed&apos;,
IF(TEXT(Status__c) == &apos;Enrollment Success&apos;, &apos;Enrollment_Success&apos;,
IF(TEXT(Status__c) == &apos;Enrollment Failed&apos;, &apos;Enrollment_Failed&apos;,
IF(TEXT(Status__c) == &apos;Withdrew Consent After Screening&apos;, &apos;Withdrew_Consent_After_Screening&apos;,
IF(TEXT(Status__c) == &apos;Declined Final Consent&apos;, &apos;Declined_Final_Consent&apos;,
IF(TEXT(Status__c) == &apos;Randomization Failed&apos;, &apos;Randomization_Failed&apos;,
IF(TEXT(Status__c) == &apos;Randomization Success&apos;, &apos;Randomization_Success&apos;, &apos;NA&apos;) ) ) ) ) ) ) ) ) ) ) ) ) ) ) ) ) ) ) ) ) ) ) ) ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Label</label>
    <type>Text</type>
</CustomField>