force-app/main/default/objects/Participant_Enrollment_Status_History__c/fields/Status_Order__c.field-meta.xml
<CustomField>
    <fullName>Status_Order__c</fullName>
    <formula>IF(TEXT(Status__c)  ==  &apos;Received&apos;, 1, 
 IF(
	OR(
		TEXT(Status__c) == &apos;Contact Attempted&apos;,
		TEXT(Status__c) == &apos;Pre-review Passed&apos;,
		TEXT(Status__c) == &apos;Pre-review Failed&apos;,
		TEXT(Status__c) == &apos;Ready to Contact&apos;, 
		TEXT(Status__c) == &apos;Contacted - Not Suitable&apos;,
		TEXT(Status__c) == &apos;Unable to Reach&apos;,
		TEXT(Status__c) == &apos;Successfully Contacted&apos;
		),
 2, 	
  IF(
    OR(TEXT(Status__c) == &apos;Eligibility Passed&apos;,
		TEXT(Status__c) == &apos;Eligibility Failed&apos;
		),
 3, 
  IF(
	OR(
		TEXT(Status__c) == &apos;Ready to Screen&apos;,
		TEXT(Status__c) == &apos;Screening In Progress&apos;,
		TEXT(Status__c) == &apos;Screening In Progress - Wash Out Period&apos;,
		TEXT(Status__c) == &apos;Screening Failed&apos;, 
		TEXT(Status__c) == &apos;Unable to Screen&apos;,
		TEXT(Status__c) == &apos;Withdrew Consent&apos;,
		TEXT(Status__c) == &apos;Eligibility Passed&apos;,
                TEXT(Status__c) == &apos;Declined Consent&apos;,
		TEXT(Status__c) == &apos;Screening Passed&apos;
		),
 4,
  IF(
	OR(
		TEXT(Status__c) == &apos;Enrollment Success&apos;,
		TEXT(Status__c) == &apos;Enrollment Failed&apos;,
		TEXT(Status__c) == &apos;Withdrew Consent After Screening&apos;, 
		TEXT(Status__c) == &apos;Declined Final Consent&apos;,
		TEXT(Status__c) == &apos;Randomization Failed&apos;,
		TEXT(Status__c) == &apos;Randomization Success&apos;
		), 
5, 6) ) ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>